leak and deprecated warnings removed